* Fixed that home-page map could not be scrolled on tablets.
Former-commit-id: f12cb1adc88432b8b82ab1b72e50650d760f1022

--- a/Source/Frame/Styles/Core.scss
+++ b/Source/Frame/Styles/Core.scss
@@ -89,6 +89,8 @@
 	.clickThroughChain { pointer-events: none; }
 	.clickThroughChain-break { pointer-events: auto; }
 
+	.hideScrollbar::-webkit-scrollbar { width: 0px; height: 0px; background: transparent; }
+
 	.recharts-cartesian-axis-tick { font-size: 12px; }
 	#recharts_measurement_span { font-size: 12px; }
 
